--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "autosignin",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node index.js",
+    "init": "npm install pm2 -gd",
+    "prod": "pm2 start index.js&&pm2 save&&pm2 startup&&pm2 save"
   },
   "author": "tony@ustb",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^2.4.1",
     "child_process": "^1.0.2",
+    "curl": "^0.1.4",
     "express": "^4.16.4",
     "iconv-lite": "^0.4.24",
     "node-schedule": "^1.3.1",
